<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".Ui.LoginActivity">

    <!-- Login progress -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/loginfondo"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:visibility="visible"
        android:id="@+id/rllogin1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/logotipo" />



        <Button
            android:id="@+id/buttoncambio"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:fontFamily="@font/roboto_light"
            android:onClick="cambioPantalla"
            android:text="@string/conectarse"
            android:textAllCaps="false"
            android:textColor="@color/grisoscuro"
            android:textSize="18sp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:id="@+id/rllogin2">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="123dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/bienvenido"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <AutoCompleteTextView
            android:id="@+id/usuario"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/contraseña"
            android:layout_alignLeft="@+id/contraseña"
            android:layout_alignStart="@+id/contraseña"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/enviar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="160dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/enviar"
            style="?android:textAppearanceSmall"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/conectarse"
            android:onClick="LogIn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>